manifests/network-policy/nginx-allow.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-curl-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: curl-app
      ports:
        - protocol: TCP
          port: 80
