manifests/network-policy/nginx-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-deny-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx-app
  policyTypes:
  - Ingress
